[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "lht"
version = "0.0.1"
authors = [
  { name="LHT Author", email="dan@solomo.io" },
]
description = "Lake House Tools for Snowflake and Salesforce"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/lht"
Issues = "https://github.com/pypa/lht/issues"