[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lht"
version = "0.0.5"
authors = [
  { name="LHT Author", email="dan@solomo.io" },
]
description = "Lakehouse Tools for Snowflake and Salesforce"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.1.2",
    "snowflake-snowpark-python>=1.18.0",
    "tomli>=2.0.2",
    "requests>=2.31.0",
    "requests_oauthlib"
]

[project.urls]
Homepage = "https://github.com/pypa/lht"
Issues = "https://github.com/pypa/lht/issues"